fixed detailCard button overflow

--- a/src/components/DetailMercat/DetailMercat.css
+++ b/src/components/DetailMercat/DetailMercat.css
@@ -60,8 +60,8 @@
 }
 
 .detail__card .ant-btn {
-  font-size: 19px;
-  padding: 8px 40px;
+  font-size: 14px;
+  padding: 8px 32px;
   height: auto;
   line-height: 1.5;
   margin-bottom: 15px;
